# pathtracer-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
benches/: benchmark_bounds.rs  benchmark_pathtracer.rs  benchmark_render.rs
data/: abandoned_tank_farm_04_1k.hdr
examples/: optix.rs  small_scene.rs  small_scene_gltf.rs  small_scene_mitsuba.rs
src/: headless.rs  lib.rs  main.rs
src/common/: bounds.rs  film.rs  filter.rs  math.rs  mod.rs  ray.rs  spectrum.rs
src/common/importer/: gltf.rs  mitsuba.rs  mod.rs
src/gui/: camera.rs  mod.rs  pipelines.rs  shaders.rs  texture.rs
src/gui/nodes/mesh/: mod.rs  pipeline.rs  shader.rs
src/gui/shaders/: mod.rs  phong.rs
src/pathtracer/: accelerator.rs  bsdf.rs  bxdf.rs  integrator.rs  interaction.rs  light.rs  lowdiscrepancy.rs  material.rs  mod.rs  primitive.rs  sampler.rs  sampling.rs  shape.rs  sobolmatrices.rs  spectrum.rs  texture.rs
src/pathtracer/accelerator/: device_programs.cu  launch_params.h  mod.rs  optix.rs
src/pathtracer/bxdf/: fresnel.rs  microfacet.rs  mod.rs
src/pathtracer/gpu/: device_programs.cu  mod.rs  optix.rs
src/pathtracer/importer/: gltf.rs  mitsuba.rs  mod.rs
src/pathtracer/material/: disney.rs  metal.rs  mod.rs  substrate.rs
src/pathtracer/sampler/: mod.rs  sobol.rs  stratified.rs
src/pathtracer/shared/: mod.rs
src/viewer/: bounds.rs  camera.rs  mesh.rs  mod.rs  pipeline.rs  quad.rs  renderer.rs  texture.rs  vertex.rs  wireframe.rs
src/viewer/importer/: gltf.rs  mitsuba.rs  mod.rs
src/viewer/shaders/: flat.rs  flat_instance.rs  mod.rs  phong.rs  quad.rs
