[package]
name = "pathtracer-rs"
version = "0.1.0"
authors = ["Eric Fang <eric1221bday@gmail.com>"]
edition = "2018"

[[example]]
name = "small_scene_gltf"

[[example]]
name = "small_scene_mitsuba"

[profile.release]
debug=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]

[dependencies]
lazy_static = "^1.3"
anyhow = "^1.0"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-atomic = "3.0.0"
slog-kvfilter = "0.7.0"
nalgebra-glm = "0.8.0"
nalgebra = "0.22.0"
genmesh = "^0.6"
image = "^0.22"
approx = "^0.3"
wgpu = "^0.5.0"
shaderc = "^0.6"
winit = "^0.22.2"
futures = "^0.3.5"
itertools = "^0.9.0"
clap = "^2.33"
num = "0.3.0"
rayon = "1.4.0"
bitflags = "1.2.1"
rand = "0.7.3"
hexf = "0.1.0"
ambassador = "0.2.1"
serde = "1.0.115"
serde_derive = "1.0.115"
serde-xml-rs = "0.4.0"
maplit = "1.0.2"

[dependencies.slog]
version = "2.5.2"
# features = ["release_max_level_trace"]

[dependencies.indicatif]
version = "^0.15"
features = ["rayon"]

[dependencies.bytemuck]
version = "^1.3.1"
features = ["extern_crate_alloc"]

[dependencies.gltf]
version = "^0.13"
features = ["KHR_lights_punctual"]