[package]
name = "pathtracer-rs"
version = "0.1.0"
authors = ["Eric Fang <eric1221bday@gmail.com>"]
edition = "2018"

[[example]]
name = "small_scene"

[[example]]
name = "optix"
required-features = ["enable_optix"]

[[bench]]
name = "benchmark_pathtracer"
harness = false

[features]
disable_rayon = [] # disable rayon for profiling purposes
enable_optix = ["cu", "optix", "ustr"]

[profile.release.package."*"]
debug=false
debug-assertions=false

# for debug purposes
[profile.release]
debug=true
debug-assertions=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]

[dev-dependencies]
criterion = "0.3.3"

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.32"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-atomic = "3.0.0"
slog-kvfilter = "0.7.0"
nalgebra-glm = "0.8.0"
genmesh = "0.6.2"
image = "0.23.9"
approx = "0.3.2"
wgpu = "^0.5.0"
shaderc = "0.6.2"
winit = "^0.22.2"
futures = "0.3.5"
itertools = "0.9.0"
clap = "^2.33"
num = "0.3.0"
rayon = "1.4.0"
bitflags = "1.2.1"
hexf = "0.1.0"
ambassador = "0.2.1"
serde = "1.0.115"
serde_derive = "1.0.115"
maplit = "1.0.2"
heck = "0.3.1"
wavefront_obj = "8.0.0"
cu = {git = "https://github.com/anderslanglands/optix-rs.git", branch = "rewrite", optional = true}
optix = {git = "https://github.com/anderslanglands/optix-rs.git", branch = "rewrite", optional = true}
ustr = {version = "0.7.0", optional = true}

[dependencies.nalgebra]
version = "0.22.0"
features = ["mint"]

[dependencies.slog]
version = "2.5.2"
# features = ["release_max_level_trace"]

[dependencies.indicatif]
version = "^0.15"
features = ["rayon"]

[dependencies.bytemuck]
version = "^1.3.1"
features = ["extern_crate_alloc"]

[dependencies.gltf]
version = "0.15.0"
features = ["KHR_lights_punctual", "KHR_materials_transmission", "KHR_materials_ior"]

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[dependencies.quick-xml]
version = "0.18.1"
features = ["serialize"]

[patch.crates-io]
gltf = { git = "https://github.com/eric1221bday/gltf.git", branch = "KHR_materials_transmission_ior" }
