[package]
name = "pathtracer-rs"
version = "0.1.0"
authors = ["Eric Fang <eric1221bday@gmail.com>"]
edition = "2021"

[[example]]
name = "small_scene"

[[example]]
name = "optix"
required-features = ["enable_optix"]

[[bench]]
name = "benchmark_pathtracer"
harness = false

[features]
disable_rayon = [] # disable rayon for profiling purposes
enable_optix = ["cu", "optix", "ustr"]

# need high opt level even for debug
[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]

[dev-dependencies]
criterion = "0.4"

[dependencies]
lazy_static = "1.4"
anyhow = "1.0"
slog-term = "2.6"
slog-async = "2.5"
slog-atomic = "3.0"
slog-kvfilter = "0.7"
nalgebra-glm = "0.18"
genmesh = "0.6"
image = "0.23"
approx = "0.5"
shaderc = "0.8"
# TODO: Upgrade to winit 0.28 once https://github.com/madsmtm/objc2/issues/432 is fixed.
winit = "0.27"
futures = "0.3"
crossbeam = "0.7"
itertools = "0.9"
clap = "2"
num = "0.3"
rayon = "1.4"
bitflags = "1.2"
hexf = "0.2"
ambassador = "0.2"
serde = "1.0"
serde_derive = "1.0"
maplit = "1.0"
heck = "0.3"
wavefront_obj = "10.0"
ustr = {version = "0.7", optional = true}

[dependencies.cu]
git = "https://github.com/eric1221bday/optix-rs.git"
# path = "../optix-rs/cu"
branch = "nalgebra_support"
optional = true

[dependencies.optix]
git = "https://github.com/eric1221bday/optix-rs.git"
# path = "../optix-rs/optix"
branch = "nalgebra_support"
features = ["nalgebra"]
optional = true

[dependencies.nalgebra]
version = "0.32"
features = ["mint"]

[dependencies.slog]
version = "2.5"
features = ["max_level_trace",  "release_max_level_info"]

[dependencies.indicatif]
version = "0.15"
features = ["rayon"]

[dependencies.bytemuck]
version = "1.4"
features = ["extern_crate_alloc"]

[dependencies.gltf]
version = "1"
features = ["KHR_lights_punctual", "KHR_materials_transmission", "KHR_materials_ior"]

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[dependencies.quick-xml]
version = "0.28"
features = ["serialize"]

[dependencies.wgpu]
version = "0.15"
features = ["spirv"]
